--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@
 
 # Site settings
 title: Portfolio
-email: orlando.aguilar@digipen.edu
+email: orlando.vivanco@Gearboxsoftware.com
 description: > # this means to ignore newlines until "baseurl:"
   Orlando Aguilar Vivanco Portfolio. Graphics and game programmer.
 baseurl: /
 github_username:  OrlandoAguilar
-
+BASE_PATH: _post
 # Build settings
 markdown: orlandoaguilar
 include: ["./Portfolio/interactive/*"]
